# hallucinator

./: CLAUDE.md  PLAN-issue-45.md  README.md  app.py  check_hallucinated_references.py  evaluate_parsing_rs.py
.github/workflows/: ci.yml  python-wheels.yml  release.yml
hallucinator-rs/: .gitignore  Cargo.toml  pyproject.toml
hallucinator-rs/crates/hallucinator-cli/: Cargo.toml
hallucinator-rs/crates/hallucinator-cli/src/: main.rs  output.rs
hallucinator-rs/crates/hallucinator-core/: Cargo.toml
hallucinator-rs/crates/hallucinator-core/src/: cache.rs  checker.rs  lib.rs  orchestrator.rs  pool.rs  rate_limit.rs
hallucinator-rs/crates/hallucinator-core/src/db/: acl.rs  crossref.rs  dblp.rs  europe_pmc.rs  mod.rs  openalex.rs  pubmed.rs  semantic_scholar.rs
hallucinator-rs/crates/hallucinator-dblp/: Cargo.toml
hallucinator-rs/crates/hallucinator-dblp/src/: db.rs  lib.rs
hallucinator-rs/crates/hallucinator-pdf/src/: archive.rs  lib.rs  (+2 more)
hallucinator-rs/crates/hallucinator-python/: Cargo.toml
hallucinator-rs/crates/hallucinator-reporting/: Cargo.toml
hallucinator-rs/crates/hallucinator-tui/: Cargo.toml
hallucinator-rs/crates/hallucinator-web/: Cargo.toml
hallucinator-rs/crates/hallucinator-web/src/: main.rs
hallucinator-rs/crates/hallucinator-web/src/handlers/: stream.rs
hallucinator-rs/python/examples/: custom_regexes.py  neurips_fps_regexps.py  regexp_improvements.py  validate_references.py
hallucinator-rs/python/hallucinator/: __init__.py  __init__.pyi  _native.pyi
hallucinator-rs/tests/: conftest.py  test_python_bindings.py  test_validation_bindings.py
templates/: index.html
(+33 files in other folders)
