[package]
name = "hallucinator-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for hallucinated reference detection"

[dependencies]
hallucinator-core.workspace = true
tokio.workspace = true
clap.workspace = true
owo-colors.workspace = true
anyhow.workspace = true
