[package]
name = "hallucinator-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axum web server with SSE streaming for hallucinated reference detection"

[dependencies]
hallucinator-core.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
tar.workspace = true
flate2.workspace = true
anyhow.workspace = true
